Changes with melon 1.6.11                                         03 Feb 2018
    *) Update License
    *) Add some basic functions for script language

Changes with melon 1.6.10                                         03 Aug 2017
    *) Added function to getting array length for melang script.
    *) Fixed some bugs for melang script.
    *) Supported adding property dynamically.

Changes with melon 1.6.9                                          01 Aug 2017
    *) Added reflection for melang script.
    *) Updated Red-Black Tree interfaces.
    *) Fixed a bug of keyword 'return' in melang script.
    *) Dropped keyword 'set' from melang script.
    *) Added garbage collector.

Changes with melon 1.6.8                                          22 May 2017
    *) Added script functions about matrix.

Changes with melon 1.6.7                                          20 May 2017
    *) Fixed some bugs of JSON.
    *) Added script functions about JSON.

Changes with melon 1.6.6                                          18 May 2017
    *) Added script function about Base64.
    *) Added script functions about DES, 3DES.
    *) Added script function about MD5.
    *) Added script functions about SHA1, SHA256.
    *) Added script function about RC4.
    *) Added script function about Prime Generator.

Changes with melon 1.6.5                                          17 May 2017
    *) Added script function about AES.

Changes with melon 1.6.4                                          16 May 2017
    *) Updated Lang component.
    *) Added Set of file of melang.
    *) Updated interfaces of string of melang.
    *) Fixed a bug in interface print of melang.
    *) Updated a macro in defs component.

Changes with melon 1.6.3                                          13 May 2017
    *) Updated Lang component.
    *) Fixed some bugs about Lang component.
    *) Added some melang functions for string.

Changes with melon 1.6.2                                          07 May 2017