@@ -1,3 +1,7 @@
+Changes with melon 1.6.12                                         14 Jul 2018
+    *) Fixed some bugs in melang
+    *) Supported Reactive Programming in melang
+
 Changes with melon 1.6.11                                         03 Feb 2018
     *) Update License
     *) Add some basic functions for script language
